# shotgunEvents

./: Dockerfile  azure-pipelines.yml  bookmark.py  pyproject.toml  requirements.txt
etc/: shotgunEventDaemon.conf
src/: shotgunEventDaemon.py
tests/: basic.py
